--- a/src/pages/slides/1.astro
+++ b/src/pages/slides/1.astro
@@ -13,13 +13,14 @@ import BaseLayout from "@layouts/Base.astro";
 
 <style>
   main {
-    background-color: white;
+    background-image: url(/img/background1.jpg);
     width: 987px;
     height: 610px;
     margin: auto;
 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 21px;
+    color: #eeeeee;
   }
 
   div.title {
