Page switch arrows.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,17 +7,13 @@ import BaseLayout from "@layouts/Base.astro";
     <h1>Hypermedia-Driven Applications</h1>
     <h2>Index</h2>
     <ul>
-      <li>
-        <a href="/slides/1">Start presentation</a>
-      </li>
-      <li>
-        <a href="/fibonacci">Fibonacci</a>
-      </li>
+      <li><a href="/slides/1">Start presentation</a></li>
+      <li><a href="/fibonacci">Fibonacci</a></li>
     </ul>
   </main>
 </BaseLayout>
 
-<style>
+<style is:global>
   main {
     background-color: white;
     width: 987px;
