--- a/src/pages/slides/1.astro
+++ b/src/pages/slides/1.astro
@@ -8,10 +8,13 @@ import BaseLayout from "@layouts/Base.astro";
       <h1>Hypermedia-Driven Applications</h1>
       <h2>Met Astro en HTMX</h2>
     </div>
+    <div class="arrow-right">
+      <a href="/slides/2"><img src="/icons/arrow-right.svg" alt="next" /></a>
+    </div>
   </main>
 </BaseLayout>
 
-<style>
+<style is:global>
   main {
     background-image: url(/img/background1.jpg);
     width: 987px;
@@ -20,7 +23,7 @@ import BaseLayout from "@layouts/Base.astro";
 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 21px;
-    color: #eeeeee;
+    color: #f8f8f8;
   }
 
   div.title {
@@ -34,5 +37,11 @@ import BaseLayout from "@layouts/Base.astro";
 
   h2 {
     font-size: 21px;
+  }
+
+  div.arrow-right {
+    position: absolute;
+    top: 288px;
+    right: 21px;
   }
 </style>
