Slides as content

--- a/src/layouts/Slide.astro
+++ b/src/layouts/Slide.astro
@@ -2,11 +2,10 @@
 import Base from "./Base.astro";
 
 interface Props {
-  prev?: string;
   next?: string;
 }
 
-const { prev, next }: Props = Astro.props;
+const { next }: Props = Astro.props;
 ---
 
 <Base>
@@ -64,9 +63,14 @@ const { prev, next }: Props = Astro.props;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 21px;
     color: #f8f8f8;
+  }
 
-    display: grid;
-    align-items: end;
+  h1 {
+    font-size: 34px;
+  }
+
+  h2 {
+    font-size: 21px;
   }
 </style>
 
