--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Hypermedia Driven Applications</title>
+    <title>HDA - Hypermedia Driven Applications</title>
   </head>
   <body>
     <slot />
