--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,3 +1,7 @@
+---
+import { ViewTransitions } from "astro:transitions";
+---
+
 <html lang="nl">
   <head>
     <meta charset="utf-8" />
@@ -5,6 +9,7 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>HDA - Hypermedia Driven Applications</title>
+    <ViewTransitions />
   </head>
   <body>
     <slot />
