--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -9,9 +9,19 @@ import { ViewTransitions } from "astro:transitions";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>HDA - Hypermedia Driven Applications</title>
+    <script
+      is:inline
+      src="https://unpkg.com/htmx.org@1.9.11"
+      integrity="sha384-0gxUXCCR8yv9FM2b+U3FDbsKthCI66oH5IA9fHppQq9DDMHuMauqq1ZHBpJxQ0J0"
+      crossorigin="anonymous"></script>
     <ViewTransitions />
   </head>
   <body>
     <slot />
+    <script>
+      document.addEventListener("astro:page-load", () => {
+        htmx.process(document.body);
+      });
+    </script>
   </body>
 </html>
