--- a/src/layouts/Slide.astro
+++ b/src/layouts/Slide.astro
@@ -1,5 +1,5 @@
 ---
-import { SlideData } from "@models/slide-data";
+import { type SlideData } from "@models/slide-data";
 import Base from "./Base.astro";
 
 interface Props {
