--- a/src/layouts/slides/TitlePage.astro
+++ b/src/layouts/slides/TitlePage.astro
@@ -1,5 +1,5 @@
 ---
-import { SlideData } from "@models/slide-data";
+import { type SlideData } from "@models/slide-data";
 import Slide from "../Slide.astro";
 
 interface Props {
