--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,24 +1,3 @@
----
-import BaseLayout from "@layouts/Base.astro";
----
-
-<BaseLayout>
-  <main>
-    <h1>Hypermedia-Driven Applications</h1>
-    <h2>Index</h2>
-    <ul>
-      <li><a href="/slides/1">Start presentation</a></li>
-      <li><a href="/fibonacci">Fibonacci</a></li>
-    </ul>
-  </main>
-</BaseLayout>
-
-<style is:global>
-  main {
-    background-color: white;
-    width: 987px;
-    height: 610px;
-    margin: auto;
-    margin-top: 0;
-  }
-</style>
+<script is:inline>
+  window.location.replace("/slides/1");
+</script>
